# micropaas

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  compose.yaml  docker-compose.yaml  flake.nix
hooks/: post-receive  update
nix/: nix.conf
stagit/: style.css
tests/: common.rs  integration_test.rs
